# organization_auth

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
src/organization_auth/adapters/: file_back.py  tokens.py
src/organization_auth/adapters/dynamodb/: base.py  groups.py  teams.py  users.py
src/organization_auth/adapters/repositories/: teams.py
src/organization_auth/cli/: group_users.py  groups.py  input.py  main.py  teams.py  users.py  view.py
src/organization_auth/domain/: base.py  groups.py  roles.py  teams.py  tokens.py  users.py  utils.py
src/organization_auth/service_layer/: exceptions.py  group_user.py  groups.py  maintenance.py  teams.py  tokens.py  trees.py  users.py
tests/e2e/: conftest.py  test_group_user.py  test_groups.py  test_maintenance.py  test_teams.py  test_tokens.py  test_trees.py  test_users.py
tests/unit/: test_teams.py
