[tool.poetry]
name = "organization_auth"
version = "0.1.0"
description = ""
authors = ["Pablo Campillo <pablo.campillo@version1.com>"]
readme = "README.md"
packages = [{include = "organization_auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pynamodb = "^5.5.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
